# crafty_server_starter

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  install.sh  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  docker-build.yml  lint.yml  release-drafter.yml
crafty_server_starter/: __main__.py  bedrock_protocol.py  bedrock_proxy.py  config.py  crafty_api.py  health_server.py  idle_monitor.py  mc_protocol.py  metrics.py  proxy_listener.py  server_state.py  webhook.py
crafty_server_watcher/: __init__.py  __main__.py  bedrock_proxy.py  config.py  crafty_api.py  idle_monitor.py  logger.py  metrics.py  proxy_listener.py  server_state.py  webhook.py
systemd/: crafty-server-watcher.service  env.example
